assignment/assignment2/initial/target/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class D96Parser(Parser):
    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "<INVALID>", "'Break'", "'Continue'",
                    "'If'", "'Elseif'", "'Else'", "'Foreach'", "'Array'",
                    "'In'", "'Int'", "'Float'", "'Boolean'", "'String'",
                    "'Return'", "'Null'", "'Class'", "'Val'", "'Var'",
                    "'Constructor'", "'Destructor'", "'New'", "'By'", "'='",
                    "'!'", "'||'", "'&&'", "'=='", "'!='", "'%'", "'+'",
                    "'-'", "'*'", "'/'", "'<'", "'<='", "'>'", "'>='",
                    "'+.'", "'==.'", "'('", "')'", "'['", "']'", "'.'",
                    "'..'", "','", "':'", "'::'", "';'", "'{'", "'}'"]

    symbolicNames = ["<INVALID>", "COMMENT", "K_BREAK", "K_CONTINUE", "K_IF",
                     "K_ELSE_IF", "K_ELSE", "K_FOR_EACH", "K_ARRAY", "K_IN",
                     "K_INT", "K_FLOAT", "K_BOOLEAN", "K_STRING", "K_RETURN",
                     "K_NULL", "K_CLASS", "K_VAL", "K_VAR", "K_CONSTRUCTOR",
                     "K_DESTRUCTOR", "K_NEW", "K_BY", "OP_ASSIGN", "OP_LOGICAL_NOT",
                     "OP_LOGICAL_OR", "OP_LOGICAL_AND", "OP_IS_EQUAL_TO",
                     "OP_NOT_EQUAL_TO", "OP_MODULO", "OP_ADDTION", "OP_SUBTRACTION",
                     "OP_MULTIPLICATION", "OP_DIVISION", "OP_LESS_THAN",
                     "OP_LESS_THAN_EQUAL", "OP_GREATER_THAN", "OP_GREATER_THAN_EQUAL",
                     "OP_STRING_CONCATENATION", "OP_TWO_SAME_STRING", "LEFT_PAREN",
                     "RIGHT_PAREN", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET",
                     "DOT", "DOUBLE_DOT", "COMMA", "COLON", "DOUBLE_COLON",
                     "SEMI_COLON", "LEFT_CURLY_BRACKET", "RIGHT_CURLY_BRACKET",
                     "INTEGER_LITERAL2", "INTEGER_LITERAL", "FLOAT_LITERAL",
                     "BOOLEAN_LITERAL", "STRING_LITERAL", "IDENTIFIER",
                     "DOLAR_IDENTIFIER", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE",
                     "ERROR_CHAR"]

    RULE_program = 0
    RULE_class_declaration = 1
    RULE_class_body_unit = 2
    RULE_super_class_group = 3
    RULE_method_declaration = 4
    RULE_constructor = 5
    RULE_destructor = 6
    RULE_parameter_list = 7
    RULE_parameter = 8
    RULE_d96_type = 9
    RULE_attribute_declaration = 10
    RULE_attribute_value_list = 11
    RULE_identifier_list = 12
    RULE_mixed_identifier_list = 13
    RULE_expression_list = 14
    RULE_element_expression = 15
    RULE_index_operator = 16
    RULE_relational_operator = 17
    RULE_expression = 18
    RULE_relational_expr = 19
    RULE_and_or_expr = 20
    RULE_add_sub_expr = 21
    RULE_mul_add_mol_expr = 22
    RULE_not_expr = 23
    RULE_sign_expr = 24
    RULE_index_operator_expr = 25
    RULE_instance_access = 26
    RULE_static_access = 27
    RULE_object_creation = 28
    RULE_atom_expr = 29
    RULE_var_val_statement = 30
    RULE_var_val_value_list = 31
    RULE_lhs = 32
    RULE_assign_statement = 33
    RULE_if_statement = 34
    RULE_if_part = 35
    RULE_else_if_part = 36
    RULE_else_part = 37
    RULE_for_in_statement = 38
    RULE_loop_part = 39
    RULE_break_statement = 40
    RULE_continue_statement = 41
    RULE_return_statement = 42
    RULE_member_access_instance = 43
    RULE_member_access_static = 44
    RULE_method_invocation_statement = 45
    RULE_block_statement = 46
    RULE_statement = 47
    RULE_literal = 48
    RULE_indexed_array = 49
    RULE_multi_dimentional_array = 50
    RULE_primitive_type = 51
    RULE_array_type = 52

    ruleNames = ["program", "class_declaration", "class_body_unit", "super_class_group",
                 "method_declaration", "constructor", "destructor", "parameter_list",
                 "parameter", "d96_type", "attribute_declaration", "attribute_value_list",
                 "identifier_list", "mixed_identifier_list", "expression_list",
                 "element_expression", "index_operator", "relational_operator",
                 "expression", "relational_expr", "and_or_expr", "add_sub_expr",
                 "mul_add_mol_expr", "not_expr", "sign_expr", "index_operator_expr",
                 "instance_access", "static_access", "object_creation",
                 "atom_expr", "var_val_statement", "var_val_value_list",
                 "lhs", "assign_statement", "if_statement", "if_part",
                 "else_if_part", "else_part", "for_in_statement", "loop_part",
                 "break_statement", "continue_statement", "return_statement",
                 "member_access_instance", "member_access_static", "method_invocation_statement",
                 "block_statement", "statement", "literal", "indexed_array",
                 "multi_dimentional_array", "primitive_type", "array_type"]

    EOF = Token.EOF
    COMMENT = 1
    K_BREAK = 2
    K_CONTINUE = 3
    K_IF = 4
    K_ELSE_IF = 5
    K_ELSE = 6
    K_FOR_EACH = 7
    K_ARRAY = 8
    K_IN = 9
    K_INT = 10
    K_FLOAT = 11
    K_BOOLEAN = 12
    K_STRING = 13
    K_RETURN = 14
    K_NULL = 15
    K_CLASS = 16
    K_VAL = 17
    K_VAR = 18
    K_CONSTRUCTOR = 19
    K_DESTRUCTOR = 20
    K_NEW = 21
    K_BY = 22
    OP_ASSIGN = 23
    OP_LOGICAL_NOT = 24
    OP_LOGICAL_OR = 25
    OP_LOGICAL_AND = 26
    OP_IS_EQUAL_TO = 27
    OP_NOT_EQUAL_TO = 28
    OP_MODULO = 29
    OP_ADDTION = 30
    OP_SUBTRACTION = 31
    OP_MULTIPLICATION = 32
    OP_DIVISION = 33
    OP_LESS_THAN = 34
    OP_LESS_THAN_EQUAL = 35
    OP_GREATER_THAN = 36
    OP_GREATER_THAN_EQUAL = 37
    OP_STRING_CONCATENATION = 38
    OP_TWO_SAME_STRING = 39
    LEFT_PAREN = 40
    RIGHT_PAREN = 41
    LEFT_SQUARE_BRACKET = 42
    RIGHT_SQUARE_BRACKET = 43
    DOT = 44
    DOUBLE_DOT = 45
    COMMA = 46
    COLON = 47
    DOUBLE_COLON = 48
    SEMI_COLON = 49
    LEFT_CURLY_BRACKET = 50
    RIGHT_CURLY_BRACKET = 51
    INTEGER_LITERAL2 = 52
    INTEGER_LITERAL = 53
    FLOAT_LITERAL = 54
    BOOLEAN_LITERAL = 55
    STRING_LITERAL = 56
    IDENTIFIER = 57
    DOLAR_IDENTIFIER = 58
    WS = 59
    UNCLOSE_STRING = 60
    ILLEGAL_ESCAPE = 61
    ERROR_CHAR = 62

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declaration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declarationContext, i)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)

    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.class_declaration()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == D96Parser.K_CLASS):
                    break

            self.state = 111
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_CLASS(self):
            return self.getToken(D96Parser.K_CLASS, 0)

        def IDENTIFIER(self):
            return self.getToken(D96Parser.IDENTIFIER, 0)

        def LEFT_CURLY_BRACKET(self):
            return self.getToken(D96Parser.LEFT_CURLY_BRACKET, 0)

        def RIGHT_CURLY_BRACKET(self):
            return self.getToken(D96Parser.RIGHT_CURLY_BRACKET, 0)

        def super_class_group(self):
            return self.getTypedRuleContext(D96Parser.Super_class_groupContext, 0)

        def class_body_unit(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_body_unitContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_body_unitContext, i)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declaration

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitClass_declaration"):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)

    def class_declaration(self):

        localctx = D96Parser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declaration)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(D96Parser.K_CLASS)
            self.state = 114
            self.match(D96Parser.IDENTIFIER)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == D96Parser.COLON:
                self.state = 115
                self.super_class_group()

            self.state = 118
            self.match(D96Parser.LEFT_CURLY_BRACKET)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << D96Parser.K_VAL) | (1 << D96Parser.K_VAR) | (1 << D96Parser.K_CONSTRUCTOR) | (
                    1 << D96Parser.K_DESTRUCTOR) | (1 << D96Parser.IDENTIFIER) | (
                            1 << D96Parser.DOLAR_IDENTIFIER))) != 0):
                self.state = 119
                self.class_body_unit()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(D96Parser.RIGHT_CURLY_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_body_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declaration(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declarationContext, 0)

        def method_declaration(self):
            return self.getTypedRuleContext(D96Parser.Method_declarationContext, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_body_unit

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitClass_body_unit"):
                return visitor.visitClass_body_unit(self)
            else:
                return visitor.visitChildren(self)

    def class_body_unit(self):

        localctx = D96Parser.Class_body_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_body_unit)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.K_VAL, D96Parser.K_VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.attribute_declaration()
                pass
            elif token in [D96Parser.K_CONSTRUCTOR, D96Parser.K_DESTRUCTOR, D96Parser.IDENTIFIER,
                           D96Parser.DOLAR_IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.method_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Super_class_groupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(D96Parser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_super_class_group

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSuper_class_group"):
                return visitor.visitSuper_class_group(self)
            else:
                return visitor.visitChildren(self)

    def super_class_group(self):

        localctx = D96Parser.Super_class_groupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_super_class_group)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(D96Parser.COLON)
            self.state = 132
            self.match(D96Parser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Method_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(D96Parser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(D96Parser.RIGHT_PAREN, 0)

        def block_statement(self):
            return self.getTypedRuleContext(D96Parser.Block_statementContext, 0)

        def IDENTIFIER(self):
            return self.getToken(D96Parser.IDENTIFIER, 0)

        def DOLAR_IDENTIFIER(self):
            return self.getToken(D96Parser.DOLAR_IDENTIFIER, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(D96Parser.Parameter_listContext, 0)

        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext, 0)

        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_method_declaration

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMethod_declaration"):
                return visitor.visitMethod_declaration(self)
            else:
                return visitor.visitChildren(self)

    def method_declaration(self):

        localctx = D96Parser.Method_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_method_declaration)
        self._la = 0  # Token type
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.IDENTIFIER, D96Parser.DOLAR_IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                _la = self._input.LA(1)
                if not (_la == D96Parser.IDENTIFIER or _la == D96Parser.DOLAR_IDENTIFIER):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 135
                self.match(D96Parser.LEFT_PAREN)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == D96Parser.IDENTIFIER:
                    self.state = 136
                    self.parameter_list()

                self.state = 139
                self.match(D96Parser.RIGHT_PAREN)
                self.state = 140
                self.block_statement()
                pass
            elif token in [D96Parser.K_CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.constructor()
                pass
            elif token in [D96Parser.K_DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_CONSTRUCTOR(self):
            return self.getToken(D96Parser.K_CONSTRUCTOR, 0)

        def LEFT_PAREN(self):
            return self.getToken(D96Parser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(D96Parser.RIGHT_PAREN, 0)

        def block_statement(self):
            return self.getTypedRuleContext(D96Parser.Block_statementContext, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(D96Parser.Parameter_listContext, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_constructor

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConstructor"):
                return visitor.visitConstructor(self)
            else:
                return visitor.visitChildren(self)

    def constructor(self):
